@@ -1,3 +1,4 @@
+- cba (ace) archives support
 - docbook help/docs
 - doxygen docs
 - QImage::load test
