@@ -17,15 +17,23 @@
 #include <qprocess.h>
 #include <qfileinfo.h>
 #include <qfile.h>
-#include <qdatastream.h>
 #include <stdlib.h>
 
 QStringList ImgArchiveSink::zip;
 QStringList ImgArchiveSink::rar;
-QStringList ImgArchiveSink::zipi;
-QStringList ImgArchiveSink::rari;
+QStringList ImgArchiveSink::ace;
+QStringList ImgArchiveSink::targz;
+QStringList ImgArchiveSink::tarbz2;
+QStringList ImgArchiveSink::zip_i;
+QStringList ImgArchiveSink::rar_i;
+QStringList ImgArchiveSink::ace_i;
+QStringList ImgArchiveSink::targz_i;
+QStringList ImgArchiveSink::tarbz2_i;
 bool ImgArchiveSink::havezip = false;
 bool ImgArchiveSink::haverar = false;
+bool ImgArchiveSink::haveace = false;
+bool ImgArchiveSink::havetargz = false;
+bool ImgArchiveSink::havetarbz2 = false;
 
 ImgArchiveSink::ImgArchiveSink(int cachesize): ImgDirSink(cachesize) /*{{{*/
 {
@@ -43,72 +51,109 @@ ImgArchiveSink::~ImgArchiveSink()/*{{{*/
 
 ImgArchiveSink::ArchiveType ImgArchiveSink::archiveType(const QString &filename)/*{{{*/
 {
-	static const unsigned char magic[2][5] = {
-		{0x52, 0x61, 0x72, 0x21, RAR_ARCHIVE},
-		{0x50, 0x4b, 0x03, 0x04, ZIP_ARCHIVE}
+	static const struct {
+		int offset;
+		int len;
+		const char *ptrn;
+		char type;
+	} magic[] = {
+		{0, 4, "\x52\x61\x72\x21", RAR_ARCHIVE},
+		{0, 4, "\x50\x4b\x03\x04", ZIP_ARCHIVE},
+		{8, 4, "\x2a\x41\x43\x45", ACE_ARCHIVE}
 	};
 
-	ArchiveType archivetype = UNKNOWN_ARCHIVE;
+	if (filename.endsWith(".rar", false) || filename.endsWith(".cbr", false))
+		return RAR_ARCHIVE;
+	if (filename.endsWith(".zip", false) || filename.endsWith(".cbz", false))
+		return ZIP_ARCHIVE;
+	if (filename.endsWith(".ace", false) || filename.endsWith(".cba", false))
+		return ACE_ARCHIVE;
+	if (filename.endsWith(".tar.gz", false) || filename.endsWith(".tgz", false))
+		return TARGZ_ARCHIVE;
+	if (filename.endsWith(".tar.bz2", false))
+		return TARBZ2_ARCHIVE;
 
 	QFile file(filename);
 	if (file.open(IO_ReadOnly))
 	{
-		char buf[4];
-		QDataStream stream(&file);
-		stream.readRawBytes(buf, 4);
-		file.close();
-		for (int i=0; i<2; i++)
+		for (int i=0; i<3; i++)
 		{
 			int j;
-			for (j=0; j<4 && buf[j]==magic[i][j]; j++);
-			if (j == 4)
+			if (!file.at(magic[i].offset))
+				continue;
+			for (j=0; j<magic[i].len; j++)
 			{
-				archivetype = static_cast<ArchiveType>(magic[i][4]);
-				break;
+				int c;
+				if ((c = file.getch()) < 0)
+					break;
+				if (c != magic[i].ptrn[j])
+					break;
 			}
+			if (j == magic[i].len)
+				return static_cast<ArchiveType>(magic[i].type);
 		}
+		file.close();
 	}
-	return archivetype;
+	return UNKNOWN_ARCHIVE;
 }/*}}}*/
 
 int ImgArchiveSink::extract(const QString &filename, const QString &destdir)/*{{{*/
 {
 	ArchiveType archivetype = archiveType(filename);
 	filesnum = 0;
+	
+	if (archivetype == UNKNOWN_ARCHIVE)
+		return SINKERR_UNKNOWNFILE;
+
+	if ((archivetype == RAR_ARCHIVE && !haverar) || (archivetype == ZIP_ARCHIVE && !havezip) ||
+	    (archivetype == ACE_ARCHIVE && !haveace) || (archivetype == TARGZ_ARCHIVE && !havetargz) ||
+	    (archivetype == TARBZ2_ARCHIVE && !havetarbz2))
+		return SINKERR_NOTSUPPORTED;	
 		
 	pinf = new QProcess(this);
-	pinf->setCommunication(QProcess::Stdout);
 	connect(pinf, SIGNAL(readyReadStdout()), this, SLOT(infoStdoutReady()));
 	connect(pinf, SIGNAL(processExited()), this, SLOT(infoExited()));
 	pext = new QProcess(this);
-	pext->setCommunication(QProcess::Stdout);
 	connect(pext, SIGNAL(readyReadStdout()), this, SLOT(extractStdoutReady()));
 	connect(pext, SIGNAL(processExited()), this, SLOT(extractExited()));
 	
 	if (archivetype == RAR_ARCHIVE)
 	{
 		pext->setArguments(rar);
-		pinf->setArguments(rari);
+		pinf->setArguments(rar_i);
 	}
 	else if (archivetype == ZIP_ARCHIVE)
 	{
 		pext->setArguments(zip);
-		pinf->setArguments(zipi);
+		pinf->setArguments(zip_i);
 	}
-	else
-		return SINKERR_UNKNOWNFILE;
+	else if (archivetype == ACE_ARCHIVE)
+	{
+		pext->setArguments(ace);
+		pinf->setArguments(ace_i);
+	}
+	else if (archivetype == TARGZ_ARCHIVE)
+	{
+		pext->setArguments(targz);
+		pinf->setArguments(targz_i);
+	}
+	else if (archivetype == TARBZ2_ARCHIVE)
+	{
+		pext->setArguments(tarbz2);
+		pinf->setArguments(tarbz2_i);
+	}
 
 	pext->addArgument(filename);
 	pinf->addArgument(filename);
 	pext->setWorkingDirectory(destdir);
 
 	//
-	// extract archive file list first. wait until the process is running
+	// extract archive file list first
 	if (!pinf->start())
 	{
 		delete pinf;
 		delete pext;
-		emit sinkError(SINKERR_OTHER);
+		return SINKERR_OTHER;
 	}
 	return 0;
 }/*}}}*/
@@ -132,7 +177,10 @@ int ImgArchiveSink::open(const QString &path)/*{{{*/
 			mkdtemp(tmpd);
 			int status = extract(path, tmppath = tmpd);
 			if (status != 0)
+			{
+				emit sinkError(status);
 				close();
+			}
 			return status;
 		}
 		else
@@ -176,7 +224,11 @@ void ImgArchiveSink::infoExited()/*{{{*/
 {
 	extcnt = 0;
 	pinf->deleteLater();
-	pext->start();
+	if (!pext->start())
+	{
+		delete pext;
+		emit sinkError(SINKERR_OTHER);
+	}
 }/*}}}*/
 
 void ImgArchiveSink::extractExited()/*{{{*/
@@ -207,7 +259,7 @@ void ImgArchiveSink::infoStdoutReady()/*{{{*/
 	QByteArray b = pinf->readStdout();
 	for (int i=0; i<b.size(); i++)
 		if (b[i] == '\n')
-			filesnum++;
+			++filesnum;
 }/*}}}*/
 
 void ImgArchiveSink::extractStdoutReady()/*{{{*/
@@ -216,31 +268,26 @@ void ImgArchiveSink::extractStdoutReady()/*{{{*/
 	for (int i=0; i<b.size(); i++)
 		if (b[i] == '\n')
 			emit progress(++extcnt, filesnum);
-	/*if (pext->canReadLineStdout())
-	{
-		QString l = pext->readLineStdout();
-		if (l.find("Extracting") == -1 || l.find("inflating") == -1)
-			emit progress(++extcnt, filesnum);
-	}*/
 }/*}}}*/
 
 bool ImgArchiveSink::autoconfRAR()/*{{{*/
 {
 	rar.clear();
+	rar_i.clear();
 	if (which("rar"))
 	{
 		rar.append("rar");
 		rar.append("x");
-		rari.append("rar");
-		rari.append("lb");
+		rar_i.append("rar");
+		rar_i.append("lb");
 		return haverar = true;
 	}
 	if (which("unrar"))
 	{
 		rar.append("unrar");
 		rar.append("x");
-		rari.append("unrar");
-		rari.append("lb");
+		rar_i.append("unrar");
+		rar_i.append("lb");
 		return haverar = true;
 	}
 	return haverar = false;
@@ -249,14 +296,64 @@ bool ImgArchiveSink::autoconfRAR()/*{{{*/
 bool ImgArchiveSink::autoconfZIP()/*{{{*/
 {
 	zip.clear();
+	zip_i.clear();
 	if (which("unzip"))
 	{
 		zip.append("unzip");
-		zipi.append("unzip");
-		zipi.append("-l");
+		zip_i.append("unzip");
+		zip_i.append("-l");
 		return havezip = true;
 	}
 	return havezip = false;
+}/*}}}*/
+
+bool ImgArchiveSink::autoconfACE()/*{{{*/
+{
+	ace.clear();
+	ace_i.clear();
+	if (which("unace"))
+	{
+		ace.append("unace");
+		ace.append("x");
+		ace.append("-y");
+		ace.append("-c-");
+		ace_i.append("unace");
+		ace_i.append("l");
+		ace_i.append("-y");
+		ace_i.append("-c-");
+		return haveace = true;
+	}
+	return haveace = false;
+}/*}}}*/
+
+bool ImgArchiveSink::autoconfTARGZ()/*{{{*/
+{
+	targz.clear();
+	targz_i.clear();
+	if (which("tar"))
+	{
+		targz.append("tar");
+		targz.append("-xvzf");
+		targz_i.append("tar");
+		targz_i.append("-tzf");
+		return havetargz = true;
+	}
+	return havetargz = false;
+}/*}}}*/
+
+bool ImgArchiveSink::autoconfTARBZ2()/*{{{*/
+{
+	tarbz2.clear();
+	tarbz2_i.clear();
+	if (which("tar"))
+	{
+		tarbz2.append("tar");
+		tarbz2.append("-xjvf");
+		tarbz2_i.append("tar");
+		tarbz2_i.append("-tjf");
+		return havetarbz2 = true;
+	}
+	return havetarbz2 = false;
 }/*}}}*/
 
 bool ImgArchiveSink::haveRAR()/*{{{*/
@@ -267,5 +364,20 @@ bool ImgArchiveSink::haveRAR()/*{{{*/
 bool ImgArchiveSink::haveZIP()/*{{{*/
 {
 	return havezip;
+}/*}}}*/
+
+bool ImgArchiveSink::haveACE()/*{{{*/
+{
+	return haveace;
+}/*}}}*/
+
+bool ImgArchiveSink::haveTARGZ()/*{{{*/
+{
+	return havetargz;
+}/*}}}*/
+
+bool ImgArchiveSink::haveTARBZ2()/*{{{*/
+{
+	return havetarbz2;
 }/*}}}*/
 
